update base models. Smooth migration to 3.x